[package]
name = "ddos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mac_address = "1.1.7"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.35.1", features = ["full"] }
